--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
-    "react-smart-tabs": "^0.2.0",
+    "react-smart-tabs": "^0.2.5-alpha",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "sip.js": "^0.15.4",
